client/src/App.css
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap');


/*///////////
///GENERAL///
///////////*/

html, body {
  margin: 0;
  background-color: var(--blue);
}

.App {
  width: 100vw;
  margin: 0;
}

a {
  text-decoration: none;
  margin: 0;
}

h1, h3 {
  margin: 0;
  text-align: center;
}

:root {
  font-family: 'Quicksand', sans-serif;
  font-size: 1.25rem;
  letter-spacing: .05rem;

  /* COLOR PALETTE */
  --darkgray: #C4C4C4;
  --lightgray: #E5E5E5;
  --blue: #7CF4E6;

  /* HOBBIES */
  --parkour: url('./parkour.svg');
  --languages: url('./languages.svg');
  --travel: url('./travel.svg');
  --meditation: url('./meditation.svg');

  /* PUBLIC PROFILES */
  --github: url('./GitHub.svg');
  --freecodecamp: url('./freeCodeCamp.svg');

  /* PUBLICATIONS */
  --setstate: url('./setStateArticle.JPG');

  /* SIDE PROJECTS */
  --medicareandmore: url('./medicareMore.JPG');
}

/*///////////////////
///LANDING PAGE//////
///////////////////*/

.Landing {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  width: 100%;
  height: 100vh;
  background-image: linear-gradient(var(--blue), var(--lightgray));
  color: black;
  margin: 0;
}

.landingText {
  min-height: 300px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

/*//////////////////////
///PAGES - HIGH LEVEL///
//////////////////////*/

.About, .Projects, .Contact, .Blog {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  background-color: var(--blue);
  margin: 0;
  width: 100%;
}

/*/////////
//NAVBAR///
/////////*/

.Navbar {
  width: 100%;
  height: 10vh;
  background-color: black;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  margin: 0;
}

.Navbar a {
  display: flex;
  justify-content: center;
  align-items: center;
  color: #E5E5E5;
  font-weight: bold;
}

/*//////////////////////
//////// HEADER ////////
//////////////////////*/
.header {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  width: 100%;
  padding: 1em 0;
  background-image: linear-gradient(var(--blue), var(--lightgray));
}

.header > * {
  padding: .5em 0;
}

.header-bio-pic {
  display: inline-block;
  width: 30vw;
  height: 30vw;
  border-radius: 30vw;
  object-fit: cover;
  object-position: center;
  padding: 3em;
}


/*---------------------------------------

      ////////////////////////////////
      //////////// ABOUT /////////////
      ////////////////////////////////

---------------------------------------*/


/*///////////////
////// BIO //////
///////////////*/

.bio {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  width: 100%;
  height: 20%;
  margin: 0;
  background-color: var(--blue);
  color: var(--lightgray);
}

.bio-pic {
  display: block;
  width: 30vw;
  height: 30vw;
  border-radius: 30vw;
  margin: 2em 0;
  object-fit: cover;
  min-height: 200px;
  min-width: 200px;
  max-height: 400px;
  max-width: 400px;
}

.bio-description {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  background-color: var(--darkgray);
  color: black;
  border-radius: 16px;
  width: 50%;
  padding: 2em;
  margin: 2em 0;
  line-height: 140%;
  min-width: 300px;
  max-width: 600px;
}

.bio-description > h1 {
  text-align: left;
}

/*//////////////
/////HOBBIES////
//////////////*/

.hobbies {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  width: 100%;
  background-color: var(--darkgray);
}

.hobby-pic {
  display: block;
  width: 15vw;
  height: 15vw;
  border-radius: 15vw;
  margin: 2em 0;
  background-repeat: round;
  background-color: var(--blue);
  min-width: 75px;
  min-height: 75px;
  max-width: 150px;
  max-height: 150px;
}

.hobby-pic:hover, .hobby-pic:focus {
  transform: scale(1.1);
  cursor: pointer;
}

.hobby-text {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 50%;
  font-weight: bold;
}

#parkour {
  background-image: var(--parkour);
}

#languages {
  background-image: var(--languages);
}

#travel {
  background-image: var(--travel);
}

#meditation {
  background-image: var(--meditation);
}

@media (min-width: 800px) {
  .hobby-text {
    font-size: 80%;
  }
}


/*////////////////
/////EDUCATION////
////////////////*/


.education {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  background-color: var(--blue);
}

.education-title {
  margin: 1em 0;
}

.education-info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 60%;
  min-width: 400px;
  min-height: 200px;
  border-radius: 16px;
  background-color: var(--darkgray);
  padding: 0 1em;
  margin: 2em 0;
  font-weight: bold;
}

.education-degree {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  padding: 1em;
}

.education-degree > p {
  margin: 0;
}

/*//////////////////////////
//////CERTIFICATES NAV//////
//////////////////////////*/

.certificatesNav {
  display: flex;
  justify-content: space-evenly;
  align-items: stretch;
  width: 100%;
  height: 10vh;
  min-height: 50px;
  background-color: var(--darkgray);
}

.btn-cert {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--darkgray);
  font-weight: bold;
  text-decoration: underline;
  width: 25%;
  margin: 0;
}

.btn-cert:hover, .btn-cert:focus {
  background-color: var(--lightgray);
  cursor: pointer;
}

@media (min-width: 640px) {
  .certificatesNav {
    height: 20vh;
  }
}

/*////////////////////////////
//////// CERTIFICATES ////////
////////////////////////////*/

.certificates-container {
  margin: 0;
  width: 100%;
}

.certificates {
  display: flex;
  flex-direction: column;
  width: 100%;
  margin: 0;
  max-height: 1000px;
}

.imageWindow {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  overflow-x: scroll;
  overflow-y: hidden;
  width: 100%;
  background-color: var(--blue);
  margin: 0;
}

.portfolioImage {
  display: block;
  width: 90%;
  height: auto;
  margin: 0;
  padding: 1em;
}

.portfolioImage:hover, .portfolioImage:focus {
  transform: scale(1.05);
  cursor: pointer;
}

.descriptionWindow {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  width: 100%;
  background-color: var(--lightgray);
  margin: 0;
  max-height: 500px;
}

.descriptionWindow > h2 {
  text-align: center;
  width: 80%;
}

.descriptionBody {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  width: 80%;
  max-height: 50%;
  margin-bottom: 1em;
  overflow-y: scroll;
  background-color: var(--darkgray);
  padding: 1em;
}

@media (min-width: 800px) {

  .certificates {
    flex-direction: row;
    max-height: 500px;
  }

  .imageWindow {
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    overflow-x: hidden;
    overflow-y: scroll;
  }

  .portfolioImage {
    max-width: 90%;
  }

  .descriptionBody {
    max-height: 70%;
  }

}

/*---------------------------------------

      ///////////////////////////////
      ////////// PROJECTS ///////////
      ///////////////////////////////

---------------------------------------*/


/*//////////////////////////////////
////////// PUBLIC PROFILES //////////
//////////////////////////////////*/


.publicProfiles {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  width: 100%;
  background-color: var(--darkgray);
}

.profileLink {
  display: block;
  width: 15.1vw;
  height: 15vw;
  border-radius: 15vw;
  margin: 2em 0;
  background-repeat: round;
  background-color: white;
  min-width: 75px;
  min-height: 75px;
  max-width: 150px;
  max-height: 150px;
}

.profileLink:hover, .profileLink:focus {
  transform: scale(1.1);
  cursor: pointer;
}

#github {
  background-image: var(--github);
}

#freecodecamp {
  background-image: var(--freecodecamp);
}

.profileLinkDiv {
  display: none;
}

/*//////////////////////////////////
/////////// PUBLICATIONS ///////////
//////////////////////////////////*/

.publications {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  background-color: var(--blue);
}

.publications-title {
  margin: 1em 0;
}

.article {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 50%;
  min-width: 400px;
  min-height: 200px;
  padding: 0 1em;
  margin: 2em 0;
  color: white;
  font-weight: bold;
  text-align: center;
}

.article:hover, .article:focus {
  cursor: pointer;
  transform: scale(1.01);
}

#setstate {
  background-image: var(--setstate), linear-gradient(-45deg, black, white);
  background-color: var(--blue);
  background-blend-mode: multiply;
}

/*///////////////////////////////////
//////FREECODECAMP PROJECTS NAV//////
///////////////////////////////////*/

.fccProjectsNav {
  display: flex;
  justify-content: space-evenly;
  align-items: stretch;
  width: 100%;
  height: 10vh;
  min-height: 50px;
  background-color: var(--darkgray);
}

.btn-proj {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--darkgray);
  font-weight: bold;
  text-decoration: underline;
  width: 33%;
  margin: 0;
  text-align: center;
}

.btn-proj:hover, .btn-proj:focus {
  background-color: var(--lightgray);
  cursor: pointer;
}

@media (min-width: 640px) {
  .fccProjectsNav {
    height: 20vh;
  }
}

/*///////////////////////////////////////////
/////////// FREECODECAMP PROJECTS ///////////
///////////////////////////////////////////*/

.fccProjects-container {
  margin: 0;
  width: 100%;
}

.fccProjects {
  display: flex;
  flex-direction: column;
  width: 100%;
  margin: 0;
  max-height: 1000px;
}

.projectImage {
  width: 7.5em;
  height: 5em;
  object-fit: cover;
  object-position: center;
  margin: 0;
  padding: 1em;
}

.projectImage:hover, .projectImage:focus {
  transform: scale(1.1);
}

.projDescriptionBody {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  width: 80%;
  max-height: 50%;
  margin-bottom: 1em;
  background-color: var(--darkgray);
  padding: 1em;
}

.btn-repo {
  width: 25%;
  background-color: var(--blue);
  color: black;
  font-weight: bold;
  text-align: center;
  padding: 1em;
}

.btn-repo:hover, .btn-repo:focus {
  transform: scale(1.1);
}

@media (min-width: 800px) {

  .fccProjects {
    flex-direction: row;
    max-height: 500px;
  }

  .projectImage {
    width: 15em;
    height: 10em;
  }

  .projDescriptionBody {
    max-height: 70%;
  }

}

/*///////////////////////////////////
/////////// SIDE PROJECTS ///////////
///////////////////////////////////*/

.sideProjects {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  background-color: var(--darkgray);
}

.sideProjects-title {
  margin: 1em 0;
}

.sideProject {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 50%;
  min-width: 400px;
  min-height: 400px;
  padding: 0 1em;
  margin: 2em 0;
  color: white;
  font-weight: bold;
  text-align: center;
}

.sideProject:hover, .sideProject:focus {
  cursor: pointer;
  transform: scale(1.01);
}

#medicareandmore {
  background-image: var(--medicareandmore), linear-gradient(-45deg, black, white);
  background-color: var(--blue);
  background-blend-mode: multiply;
  background-position: center;
}

